Fix - menu toggle issue on small devices

--- a/style.css
+++ b/style.css
@@ -25,22 +25,22 @@ and Blueprint http://www.blueprintcss.org/
 3.0 Elements
 4.0 Forms
 5.0 Navigation
-		5.1 Links
+5.1 Links
 6.0 Accessibility
 7.0 Alignments
 8.0 Clearings
 9.0 Widgets
 10.0 Content
-		10.1 Header
-		10.2 Posts and pages
-		10.3 Comments
-		10.4 Asides
-		10.5 Filter and Pagination
-		10.6 Footer
+10.1 Header
+10.2 Posts and pages
+10.3 Comments
+10.4 Asides
+10.5 Filter and Pagination
+10.6 Footer
 11.0 Infinite scroll
 12.0 Media
-		12.1 Captions
-		12.2 Galleries
+12.1 Captions
+12.2 Galleries
 13.0 Responsive
 --------------------------------------------------------------*/
 
@@ -436,11 +436,8 @@ input[type=checkbox]:checked ~ #menu {
 	-ms-user-select: none;
 	user-select: none;
 	display: none;
-	height: 50px;
-	left: 21px;
+	left: 0;
 	position: relative;
-	top: 8px;
-	width: 50px;
 	z-index: 9999;
 }
 .page-content .masonic-search {
@@ -463,10 +460,10 @@ a:hover, a:focus, a:active {
 	color: #ffc800;
 }
 .reply {
-	 /*background: none repeat scroll 0 0 #ccc;*/
-	 margin-left: 50px;
-	 padding: 10px;
-	 width: 100px;
+	/*background: none repeat scroll 0 0 #ccc;*/
+	margin-left: 50px;
+	padding: 10px;
+	width: 100px;
 }
 .reply:after{
 	color: #333;
@@ -548,7 +545,7 @@ a:hover, a:focus, a:active {
 9.1 widgets
 --------------------------------------------------------------*/
 .says {
-	 display: none;
+	display: none;
 }
 .widget {
 	margin: 0 0 1.5em;
@@ -875,19 +872,19 @@ footer .blog-post{
 	width: 100%;
 }
 #wp-custom-header-video {
-    display: block;
-    min-height: 300px;
-    min-height: 75vh;
-    width: 100%;
+	display: block;
+	min-height: 300px;
+	min-height: 75vh;
+	width: 100%;
 }
 .wp-custom-header{
-    position: relative;
-    text-align: center;
+	position: relative;
+	text-align: center;
 }
 .wp-custom-header-video-button{
-    position: absolute;
-    bottom: 0;
-    left: 0;
+	position: absolute;
+	bottom: 0;
+	left: 0;
 }
 
 /*--------------------------------------------------------------
@@ -1370,16 +1367,16 @@ footer .angled-background {
 
 /* Remove the updated class from entry meta */
 .entry-info .entry-date {
-  display: none;
+	display: none;
 }
 .entry-info .entry-date .updated {
-  display: none;
+	display: none;
 }
 .entry-date a {
-  float: right;
-  display: inline-block;
-  vertical-align: middle;
-  line-height: 4px;
+	float: right;
+	display: inline-block;
+	vertical-align: middle;
+	line-height: 4px;
 }
 .entry-date a .entry-date {
 	color: #6a6a6a;
@@ -1390,60 +1387,60 @@ footer .angled-background {
 
 /* WP-PageNavi Support */
 .wp-pagenavi a, .wp-pagenavi span {
-  border: 1px solid #ffc800;
+	border: 1px solid #ffc800;
 }
 
 /* WooCommerce */
 .woocommerce .star-rating span {
-    font-family: star;
+	font-family: star;
 }
 
 nav.woocommerce-pagination ul li a {
-    color: #333;
+	color: #333;
 }
 
 /*--------------------------------------------------------------
 Header media css
 --------------------------------------------------------------*/
 .wp-custom-header {
-    position: relative;
+	position: relative;
 }
 
 iframe#wp-custom-header-video {
-    width: 100%;
+	width: 100%;
 }
 .wp-custom-header-video-button {
-    opacity: 0;
-    visibility: hidden;
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    margin: auto;
-    width: 62px;
-    height: 50px;
-    font: 0px/0 a;
-    -moz-transition: all 0.5s;
-    -o-transition: all 0.5s;
-    -webkit-transition: all 0.5s;
-    transition: all 0.5s;
+	opacity: 0;
+	visibility: hidden;
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	margin: auto;
+	width: 62px;
+	height: 50px;
+	font: 0px/0 a;
+	-moz-transition: all 0.5s;
+	-o-transition: all 0.5s;
+	-webkit-transition: all 0.5s;
+	transition: all 0.5s;
 }
 
 .wp-custom-header:hover .wp-custom-header-video-button {
-    visibility: visible;
-    opacity: 1;
+	visibility: visible;
+	opacity: 1;
 }
 
 .wp-custom-header-video-button:before {
-    content: '\f04b';
-    display: block;
-    font-family: FontAwesome;
-    font-size: 20px;
+	content: '\f04b';
+	display: block;
+	font-family: FontAwesome;
+	font-size: 20px;
 }
 
 .wp-custom-header-video-button.wp-custom-header-video-pause:before{
-    content: '\f04c';
+	content: '\f04c';
 }
 /*--------------------------------------------------------------
 13.0 Responsive
@@ -1453,39 +1450,39 @@ iframe#wp-custom-header-video {
 		width:94%;
 		margin:0 auto;
 	}
-
+	
 }
 @media screen and (max-width: 800px) {
 	.wrapper {
 		width:94%;
 		margin:0 auto;
 	}
-.site-branding {
-	 padding: 0 0 0 30px;
-	 position: relative;
-	 width: 100%;
-}
-.site-header-text {
-	 bottom: 20px;
-	 /*margin: 0 30px;*/
-	 position: absolute;
-}
-.main-header {
-	 /*float: left;*/
-	 /*margin: 5px 20px 0 0;*/
-	 position: relative;
-}
-
+	.site-branding {
+		padding: 0 0 0 30px;
+		position: relative;
+		width: 100%;
+	}
+	.site-header-text {
+		bottom: 20px;
+		/*margin: 0 30px;*/
+		position: absolute;
+	}
+	.main-header {
+		/*float: left;*/
+		/*margin: 5px 20px 0 0;*/
+		position: relative;
+	}
+	
 	.site-title {
 		float: left;
 		font-size: 50px;
 		line-height: 60px;
-		 /*font-size: 46px;*/
-		 word-break: break-all;
+		/*font-size: 46px;*/
+		word-break: break-all;
 	}
 	nav {
-	 height: 52px;
-}
+		height: 52px;
+	}
 	.sb-search {
 		float: right;
 		height: 50px;
@@ -1577,11 +1574,10 @@ iframe#wp-custom-header-video {
 		display:block;
 	}
 	#masonic-toggle-label:before {
-		display: block;
-		height: 2px;
-		width: 24px;
-		left: 13px;
-		top: 18px;
+		display: inline-block;
+		padding: 10px;
+		left: 0;
+		top: 0;
 		color: #fff;
 		-moz-transition:all 1s cubic-bezier(.75, 1.81, .87, -0.5) 0s;
 	}
@@ -1602,7 +1598,7 @@ iframe#wp-custom-header-video {
 		width: calc(100% - 300px);
 	}
 	#masonic-toggle:checked ~ #masonic-toggle-label, #masonic-toggle:checked ~ header {
-		left: 300px;
+		left: 305px;
 	}
 	#masonic-toggle:checked ~ #masonic {
 		left: 0px;
@@ -1663,8 +1659,8 @@ iframe#wp-custom-header-video {
 		min-height: 0;
 	}
 	.site-title {
-		 font-size: 46px;
-		 word-break: break-all;
+		font-size: 46px;
+		word-break: break-all;
 	}
 	.site-title a {
 		text-align: center;
@@ -1684,15 +1680,6 @@ iframe#wp-custom-header-video {
 	#masonic-toggle:checked ~ #masonic-toggle-label {
 		height: 100%;
 		width: 50px;
-	}
-	#masonic-toggle:checked ~ #masonic-toggle-label, #masonic-toggle:checked ~ header {
-		left: calc(100% - 50px);
-	}
-	#masonic-toggle:checked ~ #masonic {
-		width: calc(100% - 50px);
-	}
-	#masonic-toggle:checked ~ #page-content {
-		margin-left: calc(100% - 50px);
 	}
 	.masonic-search-toggle .masonic-search {
 		width: 96%;
@@ -1753,28 +1740,38 @@ iframe#wp-custom-header-video {
 	}
 }
 @media screen and (max-width: 480px) {
-	.site-title {
-	 font-size: 30px;
-	 line-height: 24px;
-	 word-break: break-all;
+	#masonic {
+		width: calc(100% - 60px);
 	}
-
+	#masonic-toggle:checked ~ #masonic-toggle-label {
+		left: calc(100% - 60px);
+	}
+	
+	#masonic-toggle:checked ~ #masonic-toggle-label:before {
+		background: #1D1D1D;
+	}
+	.site-title {
+		font-size: 30px;
+		line-height: 24px;
+		word-break: break-all;
+	}
+	
 	.header-image {
 		min-height: 0;
 	}
 	.site-header-text {
-		 bottom: 30px;
+		bottom: 30px;
 	}
 	.navigation {
-		 margin: 0;
+		margin: 0;
 	}
 	.comment-content {
-		 background: none repeat scroll 0 0 #fff;
-		 padding: 10px;
-		 margin: 0;
+		background: none repeat scroll 0 0 #fff;
+		padding: 10px;
+		margin: 0;
 	}
 	.reply {
-		 margin: 0;
+		margin: 0;
 	}
 	.comments-area .children {
 		margin-left: 0;
